$Author$ $Rev$
$Date$

Revision history for Perl extension Apache::Gallery.

1.0RC3 Fri Sep 16 10:27:48 CEST 2005

	- Add watermark even when picture doesn't need to be rescaled
	  (Andreas Plesner)
	- Fix logging to work in Apache 1.3 (Andreas Plesner)
	- Bugfix: If only one GallerySize was specified, the image's
	  max width was autmatically added to GallerySizes
	  (Andreas Plesner)
	- Bugfix: Locate thm files if they are called .thm or .THM 
		(Michael Legart)

1.0RC2 Wed Jun  1 09:11:50 CEST 2005

	- Added access keys for navigation (Michael Knudsen)

1.0RC1 Tue May 24 13:31:50 CEST 2005

	- Added submit button to form in selection mode (Vlad Marchenko)
	- Added new option GalleryRootPath for use when the gallery
	  is not running from the root of the virtual host (Lubomir Host)
	- Report proper errors when there are problems with templates (Don Armstrong)
	- Support newest mod_perl2 version (Philip Paeps)

0.9.1 Sat Sep 11 23:52:16 CEST 2004

	- Fix mod_perl 1 support that was broken with 0.9 (Michael Legart)

0.9 Sat Sep 11 22:03:20 CEST 2004

	- Handle .thm for all filetypes and not just tiff, gif and png
		(Michael Legart)
	- Make GallerySortBy work for directories (Michael Legart)
	- Make GalleryDirSortBy override GallerySortBy for directories
	  (Andreas Plesner)
	- Report 404 for HEAD requests to non-existing files or directories
	  (Michael Legart)
	- Scale images when they are requested from the cache instead of
	  before the index is displayed. (Michael Legart)
	- Sort pictures the same way when viewing images as when viewing
	  directories (Andreas Plesner)
	- Make the "back" link on the error page work in IE (Michael Legart)
	- Fixed the TITLE tag for folder comments (Ondra Kudlik)
	- New option GalleryUnderscoresToSpaces to convert underscores to
	  spaces in the listing of directories. (Ondra Kudlik)
	- Bugfix for when running outside a virtual host (Jeffrey Hartmann)
	- Support Apache2 on FreeBSD (Jesper Dalberg)